src/objects/Partner_Attach__c.object
<CustomObject>
    <fields>
        <fullName>ID18__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ID field not case sensitive</inlineHelpText>
        <label>ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_APR__c</fullName>
        <label>Opportunity (APR)</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Associated_Partners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Attach_Type__c</fullName>
        <inlineHelpText>Please choose Partner Attach Type from available list</inlineHelpText>
        <label>Partner Attach Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pivotal Sub Contract</fullName>
                </value>
                <value>
                    <fullName>Joint Solution</fullName>
                </value>
                <value>
                    <fullName>RFP/RFI Inclusion</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Identified_for_Attach__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Account, Partner Record</description>
        <inlineHelpText>Which Partner is Associated?</inlineHelpText>
        <label>Partner Identified for Attach</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Attaches</relationshipLabel>
        <relationshipName>Associated_Partners</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Notes__c</fullName>
        <description>Free text field 255 character</description>
        <label>Partner Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Worksheet_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field set by Partner Manager when Complete</inlineHelpText>
        <label>Worksheet Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Worksheet_Link__c</fullName>
        <description>URL field for Partner Worksheet</description>
        <inlineHelpText>Completed by Partner Manager, quick link to Google Drive</inlineHelpText>
        <label>Worksheet Link</label>
        <type>Url</type>
    </fields>
    <description>Related Object to Opportunity Record capturing Partner Attach information</description>
    <label>Partner Attach</label>
    <nameField>
        <displayFormat>AP-{0000000}</displayFormat>
        <label>Partner Attach Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Attach</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>